<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.videolistfragment.VideoListFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/videos_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/video_list_item"/>

    <TextView
        android:id="@+id/empty_tv"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/no_videos_yet"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/videos_rv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/videos_rv">

    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>