...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Video/path/test/bla/bla" />

            <ImageView
                android:id="@+id/delete_video"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="@{() -> deleteListener.onClick(videoInfo)}"
                android:src="@drawable/delete_white"
                android:tint="@android:color/darker_gray" />
...
